# 2DPhysics

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: rect.h  utils.h
media/: simulation_screen_recording.mov
src/: main.c  rect.c  utils.c
